# CPPLIB

./: .gitignore  .pre-commit-config.yaml  .talismanrc  .typos.toml  CMakeLists.txt  Dockerfile  Jenkinsfile  LICENSE  Readme.md  conanfile.txt
.sonarlint/: connectedMode.json
ConanProfiles/: ClangProfile  GccProfile  MsvcProfile
Configs/: .clang-tidy
CustomCmakeModules/: CommonFunctions.cmake  CompileFlagsOptions_CLANG.cmake  CompileFlagsOptions_GCC.cmake  CompileFlagsOptions_MSVC.cmake  Package.cmake
Docs/: Doxyfile
Scripts/cicd/: run-clang-tidy.sh
ToolChains/: ToolChain_Linux.cmake  ToolChain_Win.cmake
Utilities/: CMakeLists.txt
Utilities/Network/: CMakeLists.txt
Utilities/Network/sources/: test.cpp
api/: logger.yaml  setting.yaml
src/: CMakeLists.txt
src/Stroalgo/: CMakeLists.txt
src/Stroalgo/Common/: CMakeLists.txt
src/Stroalgo/Common/headers/: Constants.h  Exceptions.h  GenericSingleton.h
src/Stroalgo/Common/unitTest/: GenericSingleton_unitTest.cpp
src/Stroalgo/Configuration/headers/: Settings.h
src/Stroalgo/Configuration/sources/: Settings.cpp
src/Stroalgo/Configuration/unitTest/: Settings_unitTest.cpp
src/Stroalgo/Logger/: CMakeLists.txt
src/Stroalgo/Logger/unitTest/: Logger_unitTest.cpp
src/Stroalgo/Network/: CMakeLists.txt
src/Stroalgo/Settings/headers/: Settings.h
src/Stroalgo/Settings/sources/: Settings.cpp
src/Stroalgo/Settings/unitTest/: Settings_unitTest.cpp  main.cpp
src/Utilities/: CMakeLists.txt
src/Utilities/Common/: CMakeLists.txt
src/Utilities/Common/headers/: Constants.h  Exceptions.h  GenericSingleton.h
src/Utilities/Common/unitTest/: GenericSingleton_unitTest.cpp
src/Utilities/Logger/: CMakeLists.txt
src/Utilities/Logger/headers/: Logger.h
src/Utilities/Logger/sources/: Logger.cpp
src/Utilities/Logger/unitTest/: Logger_unitTest.cpp
src/Utilities/Network/: CMakeLists.txt
src/Utilities/Network/headers/: server.h  test.h
src/Utilities/Network/sources/: server.cpp  test.cpp
src/Utilities/Network/unitTest/: main.cpp  server_unitTest.cpp  test.cpp
src/Utilities/Settings/: CMakeLists.txt
src/Utilities/Settings/headers/: Settings.h
src/Utilities/Settings/sources/: Settings.cpp
src/Utilities/Settings/unitTest/: Settings_unitTest.cpp
